# rules_python_pip_name

./: .gitignore  BUILD  MODULE.bazel  README.md  pip_tags.bzl  query.sh  requirements.in  requirements_lock.txt  rules_python_pypi_info.patch
bar/: BUILD
baz/: BUILD
foo/: BUILD
