"""Example of querying for PyPI targets or using PypyInfo providers."""
module(name = "rules_python_pip_name", version = "0.0.0")

bazel_dep(name = "rules_python", version = "1.3.0")
single_version_override(
    module_name = "rules_python",
    patch_strip = 1,
    patches = ["//:rules_python_pypi_info.patch"],
    version = "1.3.0",
)

# For local development
#local_path_override(
#    module_name = "rules_python",
#    path = "../../bazelbuild/rules_python",
#)

PYTHON_VERSION = "3.13.1"

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = PYTHON_VERSION,
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pips",
    python_version = PYTHON_VERSION,
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "pips")
